[package]
name = "rgep"
version = "0.1.0"
authors = ["Noah Ryan <noah.m.ryan@nasa.gov>"]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false

[dependencies]
statrs = "0.12"
rand = { version = "0.7.3", features = ["small_rng"] }
float-cmp = "0.4"
rayon = "1.0"
im = "12.3"
num = "0.2"
myopic = "0.1"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "bench"
harness = false
